--- a/Regex_User_Registration/TestEmail/TestUserInfo.csproj
+++ b/Regex_User_Registration/TestEmail/TestUserInfo.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="EmailTest.cs">
+    <Compile Update="User_Input_Test.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
